kubernetes/chatiq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: chatiq
  name: chatiq
spec:
  type: LoadBalancer
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    service: chatiq
status:
  loadBalancer: {}
