kubernetes/t2v-transformers-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: t2v-transformers
  name: t2v-transformers
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    service: t2v-transformers
status:
  loadBalancer: {}
