kubernetes/weaviate-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: weaviate
  name: weaviate
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    service: weaviate
status:
  loadBalancer: {}
